tests/baselines/reference/functionSignatureAssignmentCompat1.errors.txt
tests/cases/compiler/functionSignatureAssignmentCompat1.ts(10,5): error TS2322: Type '(delimiter?: 文字) => ParserFunc' is not assignable to type 'ParserFunc'.
  Types of parameters 'delimiter' and 'eventEmitter' are incompatible.
    Type '数字' is not assignable to type '文字'.


==== tests/cases/compiler/functionSignatureAssignmentCompat1.ts (1 errors) ====
    interface ParserFunc {
        (eventEmitter: number, buffer: string): void;
    }
    interface Parsers {
        raw: ParserFunc;
        readline(delimiter?: string): ParserFunc;
    }
    var parsers: Parsers;
    var c: ParserFunc = parsers.raw; // ok!
    var d: ParserFunc = parsers.readline; // not ok
        ~
!!! error TS2322: Type '(delimiter?: 文字) => ParserFunc' is not assignable to type 'ParserFunc'.
!!! error TS2322:   Types of parameters 'delimiter' and 'eventEmitter' are incompatible.
!!! error TS2322:     Type '数字' is not assignable to type '文字'.
    var e: ParserFunc = parsers.readline(); // ok